Closed Bug 1319303 Opened 8 years ago Closed 8 years ago

Fix GLXBadDrawable abort during running reftest on linux

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(2 files)

When I run restest with "./mach restet", it caused GLXBadDrawable abort.
Blocks: webrender
Assignee: nobody → sotaro.ikeda.g
The bug is similar to Bug 1263515. X_GLXMakeCurrent was called after widget destruction.
Attached file crash_stack
By clean up GLContext before Widget destruction, the abort was addressed.
Attachment #8813012 - Flags: review?(bugmail)
Blocks: 1318113
Attachment #8813012 - Flags: review?(bugmail) → review+
Next time please make sure the patch has a commit message and author information. I could have landed this for you.
(In reply to Kartikaya Gupta away[Nov24,Dec5) (email:kats@mozilla.com) from comment #4)
> Next time please make sure the patch has a commit message and author
> information. I could have landed this for you.

Thanks. I am going to add them next time.
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/39388a579208
Add WebRenderBridgeParent::ClearResources() r=kats
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
So actually it's not clear to me now why this is supposed to fix the problem. ActorDestroy should be getting called *after* RecvDestroy, so if RecvDestroy is "too late" (i.e. after widget destruction) then cleaning up in ActorDestroy won't do any good because it will be even later.

In my latest try push I'm still seeing a crash with this same stack [1].

[1] https://treeherder.mozilla.org/logviewer.html#?job_id=31677637&repo=try#L1612
I think it might just be that WebRenderLayerManager is calling WRBridge()->SendDestroy() too late. I'll file a new bug for it.
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #7)
> So actually it's not clear to me now why this is supposed to fix the
> problem. ActorDestroy should be getting called *after* RecvDestroy, so if
> RecvDestroy is "too late" (i.e. after widget destruction) then cleaning up
> in ActorDestroy won't do any good because it will be even later.
> 
> In my latest try push I'm still seeing a crash with this same stack [1].
> 

Bug 1320277 handled delayed message problem.
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: