Bug 1319303 - Add WebRenderBridgeParent::ClearResources() r=kats